--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@ mathjax: true
 searchbar: true
 plugins:
   - jekyll-readme-index
-  - jekyll-pdf-embed
+  # - jekyll-pdf-embed
   - jekyll-sitemap
   - jekyll-toc
-  - jekyll-youtube
+  # - jekyll-youtube
   - jekyll-seo-tag
 
 baseurl: /tweak-notes
