--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ plugins:
   - jekyll-readme-index
   # - jekyll-pdf-embed
   - jekyll-sitemap
-  # - jekyll-youtube
+  - jekyll-youtube
   - jekyll-seo-tag
 
 baseurl: /tweak-notes
