--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,17 @@
 title: tweak-notes
 description: "Jekyll theme for GitHub Pages based on my tweaks on primer theme"
+url: https://pisaucer.github.io/tweak-notes/ # the base hostname & protocol for your site
+baseurl: /tweak-notes
 markdown: kramdown
 mathjax: true
 searchbar: true
 plugins:
   - jekyll-readme-index
-  # - jekyll-pdf-embed
+  - jekyll-pdf-embed
   - jekyll-sitemap
   - jekyll-youtube
   - jekyll-seo-tag
 
-baseurl: /tweak-notes
 favicon_dir: false
 favicon_color: '#FFFFFF'
 permalink: /:title/
