--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -8,20 +8,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout
+
     - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
+      uses: ruby/setup-ruby
       with:
         ruby-version: 3.1
+
     - name: Install dependencies
       run: |
         gem install bundler
         bundle install
+
     - name: Build Jekyll site
       run: |
         bundle exec jekyll build
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+
+    - name: Upload Artifact
+      uses: actions/upload-pages-artifact
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./_site
+          path: "./_site"
+
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages
