--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,33 +1,49 @@
 name: GitHub Pages
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout
+      - name: Checkout
+        uses: actions/checkout
 
-    - name: Set up Ruby
-      uses: ruby/setup-ruby
-      with:
-        ruby-version: 3.1
+      - name: Setup Ruby
+        uses: ruby/setup-ruby
+        with:
+          ruby-version: '3.1'
+          bundler-cache: true 
 
-    - name: Install dependencies
-      run: |
-        gem install bundler
-        bundle install
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v5
 
-    - name: Build Jekyll site
-      run: |
-        bundle exec jekyll build
+      - name: Build with Jekyll
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        env:
+          JEKYLL_ENV: production
 
-    - name: Upload Artifact
-      uses: actions/upload-pages-artifact
-      with:
-          path: "./_site"
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
 
-    - name: Deploy to GitHub Pages
-      uses: actions/deploy-pages
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
